Modificações obrigatórias atualizadas

--- a/Front/Mapa/Regioes/norte.html
+++ b/Front/Mapa/Regioes/norte.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="imagem/jpg" href="../img/logo.png">
+    <link rel="shortcut icon" type="imagem/jpg" href="../../img/logo.png">
     <title>Região Norte</title>
 </head>
 
@@ -38,7 +38,8 @@
                 <h3 id="introduçao1">A violência do bullying na Região Norte do Brasil </h3>
                 <p id="p-introduçao">
                     A Região Norte do Brasil é composta por sete estados: Amazonas, Amapá, Acre, Pará, Rondônia, Roraima e Tocantins. 
-                    Os dados a seguir referem-se a essa região, conforme os resultados da Pesquisa Nacional de Saúde do Escolar de 2015.
+                    Os dados a seguir referem-se a essa região, conforme os resultados da Pesquisa Nacional de Saúde do Escolar de 2015 segundo 
+                    este <a href="https://dialnet.unirioja.es/servlet/articulo?codigo=8075420">artigo</a>.
                 </p>
 
                 <p id="p-introduçao2">
