--- a/Front/Mapa/Regioes/sudeste.html
+++ b/Front/Mapa/Regioes/sudeste.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="imagem/jpg" href="../../img/logo.png">
     <title>Região Sudeste</title>
 </head>
 
@@ -39,7 +40,8 @@
                     A Região Sudeste do território brasileiro é composta por quatro estados, 
                     são eles: São Paulo, Rio de Janeiro, Minas Gerais e Espírito Santo. Os dados a 
                     seguir referem-se a essa região, conforme os resultados da Pesquisa Nacional de 
-                    Saúde do Escolar de 2012.
+                    Saúde do Escolar de 2012 segundo 
+                    este <a href="https://www.scielosp.org/article/ssm/content/raw/?resource_ssm_path=/media/assets/rbepid/v19n4/1980-5497-rbepid-19-04-00866.pdf">artigo</a>.
                 </p>
 
                 <p id="p-introduçao2">
